# local-ai-analyst

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SCIENCE_NOTEBOOK_STYLE_GUIDE.md  DOCUMENTATION_MAP.md  LICENSE  PROJECT_STATUS.md  QUICK_START.md  README.md  SEMANTIC_LAYER_RESEARCH.md  UX_AUDIT_REPORT.md  UX_FIXES_EXECUTIVE_SUMMARY.md  package.json  pytest.ini
semantic-layer/: .flake8  CURRENT_STATE.md  DESIGN_NOTES.md  DOCUMENTATION_ARCHITECTURE.md  DOCUMENTATION_MAP.md  PERFORMANCE_SUMMARY.md  PHASE_3_COMPLETE.md  PHASE_4_3_COMPLETE.md  PHASE_5.1_IMPLEMENTATION_SUMMARY.md  PHASE_5_3_IMPLEMENTATION_SUMMARY.md  PHASE_5_TEST_RESULTS.md  PHASE_5_TEST_RESULTS_ADDENDUM.md  README.md  RUNTIME_METRICS_USAGE.md  SEMANTIC_MODEL_DECISIONS.md  SEMANTIC_MODEL_DOCUMENTATION.md  TDD_IMPLEMENTATION_SUMMARY.md  UAT_DEPLOYMENT_GUIDE.md  WORKFLOW_ORCHESTRATOR_FIX_README.md  __init__.py  claude_desktop_config.json  debug_semantic_layer.py  generate_sample_data.py  load_to_duckdb.py  main.py  pyproject.toml  run_all_workflow_tests.py  run_mcp_server.py  run_openai_server.py  test_all_functionality.py  test_all_mcp_tools.py  test_conversation_memory.py  test_corrected_functionality.py  test_intelligence_engine_fix.py  test_list_templates_integration.py  test_manual_list_models.py  test_mcp_server.py  test_phase_4_2_optimization.py  test_phase_4_3_workflows.py  test_phase_5_integration.py  (+10 more)
semantic-layer/data/: events.csv  sessions.csv  users.csv
semantic-layer/docs/: CLAUDE_DESKTOP_SETUP.md  FABRICATION_PREVENTION.md  QUERY_VALIDATION.md  (+3 more)
(+104 files in other folders)
